legibility fixes

--- a/sass/_theme_faculty_card.sass
+++ b/sass/_theme_faculty_card.sass
@@ -66,6 +66,8 @@
                 margin-top: auto
                 margin-bottom: 1rem
             .fac-email
+                a
+                    word-break: break-all
                 &::before
                     content: "✉"
                     content: "\2709" / attr(data-alt)
